edition = "2023";

package protocol;

option go_package = "internal/common/protocol/proto";

message RegisterRequest {
  string login = 1;
  string password = 2;
}

message RegisterResponse {
  string error = 1;
  string token = 2;
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string error = 1;
  string token = 2;
}

service Auth {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}
